modified the form element

--- a/index.html
+++ b/index.html
@@ -113,22 +113,22 @@
 
     <section>
       <p>How interested are you in our design skills?</p>
-      <form  action="index.html" m>
+      <form  action="index.html" method="post">
         <div>
-          <label for="ver-Low">Very Low</label>
-          <input type="radio" id="Low">
+          <label for="VeryLow">Very Low</label>
+          <input type="radio" id="Low" name="interset">
         </div>
         <div>
-          <label for="low">Low</label>
-          <input type="radio" id="low">
+          <label for="Low">Low</label>
+          <input type="radio" id="low"  name="interset">
         </div>
         <div>
-          <label for="medium">Medium</label>
-          <input type="radio" id="meium">
+          <label for="Medium">Medium</label>
+          <input type="radio" id="meium"  name="interset">
         </div>
         <div>
-          <label for="high">High</label>
-          <input type="radio" id="high">
+          <label for="High">High</label>
+          <input type="radio" id="high"  name="interset">
         </div>
         <input type="submit" id="submit" value="submit me!">
       </form>
