modified the footer

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </main>
 
   <footer>
-    Here is our footer - lets make sure we copyright &copy, this!
+    Here is our footer - lets make sure we copyright &copy; this!
   </footer>
 
 </body>
