modified the names

--- a/index.html
+++ b/index.html
@@ -116,19 +116,19 @@
       <form  action="index.html" method="post">
         <div>
           <label for="VeryLow">Very Low</label>
-          <input type="radio" id="Low" name="interset">
+          <input type="radio" id="Low" name="interest">
         </div>
         <div>
           <label for="Low">Low</label>
-          <input type="radio" id="low"  name="interset">
+          <input type="radio" id="low"  name="interest">
         </div>
         <div>
           <label for="Medium">Medium</label>
-          <input type="radio" id="meium"  name="interset">
+          <input type="radio" id="meium"  name="interest">
         </div>
         <div>
           <label for="High">High</label>
-          <input type="radio" id="high"  name="interset">
+          <input type="radio" id="high"  name="interest">
         </div>
         <input type="submit" id="submit" value="submit me!">
       </form>
